load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "swephgo",
    srcs = [
        "cgo_helpers.go",
        "cgo_helpers.h",
        "const.go",
        "doc.go",
        "sweodef.h",
        "sweph.h",
        "swephexp.h",
        "swephgo.go",
        "types.go",
    ],
    cdeps = ["//third_party/swisseph:swe_foreign"],
    cgo = True,
    clinkopts = ["-lswe"],
    copts = ["-Ithird_party/swephgo"],
    importpath = "github.com/yggdrasildev/seer/third_party/swephgo",
    tags = [
        "netgo",
        "osusergo",
        "static",
    ],
    visibility = ["//visibility:public"],
)
