load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "sample_lib",
    srcs = ["main.go"],
    importpath = "github.com/yggdrasildev/seer/third_party/swephgo/sample",
    visibility = ["//visibility:private"],
    deps = ["//third_party/swephgo"],
)

go_binary(
    name = "sample",
    embed = [":sample_lib"],
    visibility = ["//visibility:public"],
)
